dnl Process this file with autoconf to produce a configure script.
AC_INIT(xdmcpc, 2.1.1)
AC_CONFIG_SRCDIR([xdmcp.c])

AC_PREREQ(2.52)

AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_ISC_POSIX
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_STDC([])
AC_CHECK_HEADERS([string.h fcntl.h sys/file.h sys/param.h])

AC_OUTPUT(
Makefile
)
